<resources>
    <string name="test">测试</string>
    <string name="local_service">本地服务</string>
    <string name="start_service">启动服务</string>
    <string name="stop_service">停止服务</string>
    <string name="comm_service">可通讯服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="service_content_title">MyServcie</string>
    <string name="service_content">点击我可以进入到MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--View 部分-->
    <string name="AS_Dragged_View">点击拖动</string>
    <string name="AS_Scroller_View">弹性滑动</string>
    <string name="AS_Slide_Use_Scroller">弹性滑动(使用Scroller，内容滑动)</string>
    <string name="AS_Slide_Use_Delayed">弹性滑动(使用延时策略，内容滑动)</string>
    <string name="AS_Translation_Animator">属性动画，平移效果</string>
    <string name="AS_Scale_Animator">属性动画，缩放效果</string>
    <string name="AS_Rotate_Animator">属性动画，旋转效果</string>
    <string name="AS_Custom_Circle_View">自定义的一个圆形View</string>
    <string name="AS_Custom_Rotate_ImageView">自定义的一个旋转View</string>
    <string name="AS_Custom_ArcView">角度逐渐增加的弧形</string>
    <string name="AS_Custom_LineChartView">折线图</string>
    <string name="As_Tem_Control">温控</string>
    <string name="As_Already_Collected">已收藏</string>
    <string name="As_Already_Auth">已授权</string>
    <string name="As_Custom_Corner_View">自定义圆角View</string>
    <string name="As_Custom_TextViewGroup_View">自定义TextView组合控件</string>

    <!--broadcast 部分-->
    <string name="AS_Broadcast_Send_One_Static_Standard_Broadcast_Unused">发送一条静态注册的标准广播</string>
    <string name="AS_Broadcast_Send_One_Static_Standard_Broadcast_Unused_Tips">Android 8 及其以上收不到这个广播</string>
    <string name="AS_Broadcast_Send_One_Static_Standard_Broadcast">发送一条静态注册的标准广播，指定应用包名和广播接收器类名</string>
    <string name="AS_Broadcast_Send_One_Static_Standard_Broadcast_Tips">Android 8 及其以上可以收到这个广播</string>
    <string name="AS_Broadcast_Send_One_Offline_Broadcast">发送一条强制下线的广播</string>

    <!--Content Provider 部分-->
    <string name="AS_Content_Provider_Call_Phone">拨打电话：10086</string>
    <string name="AS_Content_Provider_Call_Phone_Tips">需要申请运行时权限</string>
    <string name="AS_Content_Provider_Read_Phone_Contacts">读取电话联系人</string>
    <string name="AS_Content_Provider_Hide_Phone_Contacts">隐藏电话联系人</string>

    <!--屏幕适配部分-->
    <string name="AS_Screen_Adaptation_print_metrics_info">打印设备的 Metrics 信息</string>
    <string name="AS_Screen_Adaptation_hide_metrics_info">隐藏设备的 Metrics 信息</string>

    <!--网络部分-->
    <string name="AS_Send_One_Req">使用HttpURLConnection发送一条请求</string>

    <!--RemoteViews 部分-->
    <string name="AS_Pop_One_Notification">弹出一条通知</string>
    <string name="AS_Pop_One_Custom_Notification">弹出一条自定义布局的通知，使用 RemoteViews 加载布局</string>
    <string name="AS_Notification_Title_Default">Default Notification</string>
    <string name="AS_Notification_Content_Default">Click me into RemoteViews Activity</string>
    <string name="AS_RemoteViews_Title_Custom">Custom Notification Use RemoteViews</string>

    <!--Window 部分-->
    <string name="AS_Create_Application_Window">添加应用 Window</string>
    <string name="AS_Create_Sub_Window">添加子 Window</string>
    <string name="AS_Create_Sys_Window">添加系统 Window</string>
    <string name="AS_Del_Window">删除 Window</string>

    <!--IPC 部分-->
    <string name="AS_En_Go">Go</string>
    <string name="AS_En_This_Is_IPCSecondAct">Hello, This is IPCSecondActivity!</string>
</resources>
