<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/bt_create_application_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/AS_Create_Application_Window"/>
    <Button
        android:id="@+id/bt_create_sub_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_create_application_window"
        android:text="@string/AS_Create_Sub_Window"/>
    <Button
        android:id="@+id/bt_create_sys_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_create_sub_window"
        android:text="@string/AS_Create_Sys_Window"/>
    <Button
        android:id="@+id/bt_del_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/AS_Del_Window"/>
</androidx.constraintlayout.widget.ConstraintLayout>