<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".broadcast.MainActivity">
    <Button
        android:id="@+id/bt_send_broadcast_unused"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AS_Broadcast_Send_One_Static_Standard_Broadcast_Unused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_send_broadcast_unused"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_send_broadcast_unused"
        android:text="@string/AS_Broadcast_Send_One_Static_Standard_Broadcast_Unused_Tips"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/bt_send_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AS_Broadcast_Send_One_Static_Standard_Broadcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_send_broadcast_unused" />
    <TextView
        android:id="@+id/tv_send_broadcast_used"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_send_broadcast"
        android:text="@string/AS_Broadcast_Send_One_Static_Standard_Broadcast_Tips"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/bt_send_offline_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_send_broadcast_used"
        android:text="@string/AS_Broadcast_Send_One_Offline_Broadcast"/>
</androidx.constraintlayout.widget.ConstraintLayout>