<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".contentprovider.MainActivity">
    <Button
        android:id="@+id/bt_call_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/AS_Content_Provider_Call_Phone"/>
    <TextView
        android:id="@+id/tv_call_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_call_phone"
        android:text="@string/AS_Content_Provider_Call_Phone_Tips"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/bt_read_phone_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_call_phone"
        android:text="@string/AS_Content_Provider_Read_Phone_Contacts"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_phone_contacts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_read_phone_contacts"/>
</androidx.constraintlayout.widget.ConstraintLayout>